ajout des liens pour aller à la page des menus et revenir à l'accueil

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -17,7 +17,11 @@
 
         <header>
             <div>
-                <nav><i class="fas fa-arrow-left"></i></nav>
+                <nav>
+                    <a href="/accueil.html" title="revenir à la page d'accueil">
+                        <i class="fas fa-arrow-left"></i>
+                    </a>
+                </nav>
                 <img src="images/logo/ohmyfood.png" alt="logo de l'entreprise OHMYFOOD">
             </div>
         </header>
