--- a/accueil.html
+++ b/accueil.html
@@ -83,43 +83,51 @@
             <div>
 
                 <div class="card">
-                    <p class="etiquette">Nouveau</p>
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
-                    <div class="description">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <i class="fas fa-heart"></i>
-                    </div>
+                    <a href="/la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
+                        <p class="etiquette">Nouveau</p>
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
+                        <div class="description">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="card">
-                    <p class="etiquette">Nouveau</p>
-                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant La note enchantée">
-                    <div class="description">
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                        <i class="fas fa-heart"></i>
-                    </div>
+                    <a href="/la_note_enchantee.html" title="voir le menu du restaurant La note enchantée">
+                        <p class="etiquette">Nouveau</p>
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant La note enchantée">
+                        <div class="description">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="card">
-                    <p class="etiquette">Nouveau</p>
-                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
-                    <div class="description">
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
-                        <i class="fas fa-heart"></i>
-                    </div>
+                    <a href="/a_la_francaise.html" title="voir le menu du restaurant À la française">
+                        <p class="etiquette">Nouveau</p>
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+                        <div class="description">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="card">
-                    <p class="etiquette">Nouveau</p>
-                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant Le délice des sens">
-                    <div class="description">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                        <i class="fas fa-heart"></i>
-                    </div>
+                    <a href="/le_delice_des_sens.html" title="voir le menu du restaurant À la française">
+                        <p class="etiquette">Nouveau</p>
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant Le délice des sens">
+                        <div class="description">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </a>
                 </div>
 
             </div>
