mise en place de sass (variables) puis du css du header, et première section de la page accueil

--- a/accueil.html
+++ b/accueil.html
@@ -11,6 +11,7 @@
     !">   
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/css/normalize.css">
+    <link rel="stylesheet" href="styles/css/accueil.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
 
     <main>
 
-        <p>
+        <p class="position">
             <i class="fas fa-map-marker-alt center"></i>
             Paris, Belleville
         </p>
