--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Fonctionnement</h2>
             <div class="step-container">
 
-                <div class="step">
+                <div class="card step">
                     <p>
                         <span class="step-number">1</span>
                         <i class="fas fa-mobile-alt"></i>
@@ -54,7 +54,7 @@
                     </p>             
                 </div>
 
-                <div class="step">
+                <div class="card step">
                     <p>
                         <span class="step-number">2</span>
                         <i class="fas fa-list-ul"></i>
@@ -62,7 +62,7 @@
                     </p> 
                 </div>
 
-                <div class="step">
+                <div class="card step">
                     <p>
                         <span class="step-number">3</span>
                         <i class="fas fa-store"></i>
@@ -76,57 +76,77 @@
         <!--    FIN SECTION FONCTIONNEMENT    -->
 
         <!--    SECTION RESTAURANT    -->
-        <!--    <i class="fas fa-heart"></i>    -->
+        <!--    <i class="far fa-heart"></i>    -->
         <section>
 
             <h2>Restaurants</h2>
 
             <div>
 
-                <div class="card">
+                <div class="card restaurant">
                     <a href="/la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
                         <p class="etiquette">Nouveau</p>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
                         <div class="description">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <i class="fas fa-heart"></i>
+                            <div>  
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>                       
+                            <p class="icons">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </p>
                         </div>
                     </a>
                 </div>
 
-                <div class="card">
+                <div class="card restaurant">
                     <a href="/la_note_enchantee.html" title="voir le menu du restaurant La note enchantée">
                         <p class="etiquette">Nouveau</p>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant La note enchantée">
                         <div class="description">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
-                            <i class="fas fa-heart"></i>
+                            <div>
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                            <p class="icons">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </p>
                         </div>
                     </a>
                 </div>
 
-                <div class="card">
+                <div class="card restaurant">
                     <a href="/a_la_francaise.html" title="voir le menu du restaurant À la française">
                         <p class="etiquette">Nouveau</p>
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
                         <div class="description">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
-                            <i class="fas fa-heart"></i>
+                            <div>
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <p class="icons">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </p>
                         </div>
                     </a>
                 </div>
 
-                <div class="card">
+                <div class="card restaurant">
                     <a href="/le_delice_des_sens.html" title="voir le menu du restaurant À la française">
                         <p class="etiquette">Nouveau</p>
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant Le délice des sens">
                         <div class="description">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                            <i class="fas fa-heart"></i>
+                            <div>
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <p class="icons">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </p>
                         </div>
                     </a>
                 </div>
