--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -11,19 +11,21 @@
         !">   
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/css/normalize.css">
+        <link rel="stylesheet" href="styles/css/menu.css">
     </head>
 
     <body>
 
         <header>
-            <div>
+            
                 <nav>
                     <a href="/accueil.html" title="revenir à la page d'accueil">
                         <i class="fas fa-arrow-left"></i>
                     </a>
                 </nav>
-                <img src="images/logo/ohmyfood.png" alt="logo de l'entreprise OHMYFOOD">
-            </div>
+                <h1>ohmyfood</h1>
+                <i class="fas fa-arrow-right"></i>
+            
         </header>
 
         <main>
@@ -34,9 +36,10 @@
 
                 <div>
                     <h1>À la française</h1>
-                    <i class="fas fa-heart"></i>
+                    <i class="far fa-heart"></i>
                 </div>
 
+                <!--    ENTRÉES   -->
                 <div class="meal-section">
 
                     <h2>ENTRÉES</h2>
@@ -77,6 +80,7 @@
 
                 </div>
 
+                <!--    PLATS   -->
                 <div class="meal-section">
 
                     <h2>PLATS</h2>
@@ -117,6 +121,7 @@
 
                 </div>
 
+                <!--    DESSERTS   -->
                 <div class="meal-section">
 
                     <h2>DESSERTS</h2>
