--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -11,6 +11,7 @@
         !">   
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/css/normalize.css">
+        <link rel="stylesheet" href="styles/css/menu.css">
     </head>
 
     <body>
@@ -22,7 +23,7 @@
                         <i class="fas fa-arrow-left"></i>
                     </a>
                 </nav>
-                <img src="images/logo/ohmyfood.png" alt="logo de l'entreprise OHMYFOOD">
+                <h1>ohmyfood</h1>
             </div>
         </header>
 
