mise en place du css des meal-item et de l'animation du hover

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -29,7 +29,7 @@
         </header>
 
         <main>
-            <!--   <i class="far fa-check-circle"></i> -->
+            <!--   <i class="fas fa-check-circle"></i> -->
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
@@ -42,40 +42,40 @@
                 <!--    ENTRÉES   -->
                 <div class="meal-section">
 
-                    <h2>ENTRÉES</h2>
+                    <p class="meal-section-title">ENTRÉES</p>
                     <div class="underline"></div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Tartare de poulpe acidulé</h3>
+                            <p class="meal-item-title">Tartare de poulpe acidulé</p>
                             <div class="meal-item-description">
                                 <p>Aux zests d'orange</p>
                                 <p class="price">25€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Velouté de légumes d'antant</h3>
+                            <p class="meal-item-title">Velouté de légumes d'antant</p>
                             <div class="meal-item-description">
                                 <p>Carotte, panais, topinambour</p>
                                 <p class="price">35€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Soupe à l'oignon</h3>
+                            <p class="meal-item-title">Soupe à l'oignon</p>
                             <div class="meal-item-description">
                                 <p>Revisitée</p>
                                 <p class="price">20€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                 </div>
@@ -83,40 +83,40 @@
                 <!--    PLATS   -->
                 <div class="meal-section">
 
-                    <h2>PLATS</h2>
+                    <p class="meal-section-title">PLATS</p>
                     <div class="underline"></div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Coquilles Saint-Jacques</h3>
+                            <p class="meal-item-title">Coquilles Saint-Jacques</p>
                             <div class="meal-item-description">
                                 <p>Accompagnées d'une purée de panais</p>
                                 <p class="price">40€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Magret de canard</h3>
+                            <p class="meal-item-title">Magret de canard</p>
                             <div class="meal-item-description">
                                 <p>Et parmentier de pommes de terre</p>
                                 <p class="price">35€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p class="meal-item-title">Pigeonneau d’Ille-et-Vilaine</p>
                             <div class="meal-item-description">
                                 <p>Sur son lit de gnocchis aux légumes</p>
                                 <p class="price">44€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                 </div>
@@ -124,40 +124,40 @@
                 <!--    DESSERTS   -->
                 <div class="meal-section">
 
-                    <h2>DESSERTS</h2>
+                    <p class="meal-section-title">DESSERTS</p>
                     <div class="underline"></div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Pétales de violettes glacés</h3>
+                            <p class="meal-item-title">Pétales de violettes glacés</p>
                             <div class="meal-item-description">
                                 <p>Et purée de noisettes</p>
                                 <p class="price">18€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Fondant au chocolat</h3>
+                            <p class="meal-item-title">Fondant au chocolat</p>
                             <div class="meal-item-description">
                                 <p>Revisité</p>
                                 <p class="price">22€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                     <div class="meal-item">
                         <div class="meal-item-container">
-                            <h3>Millefeuille croustillant</h3>
+                            <p class="meal-item-title">Millefeuille croustillant</p>
                             <div class="meal-item-description">
                                 <p>Myrtilles et pâte d’amande</p>
                                 <p class="price">23€</p>
                             </div>
                         </div>
-                        <i class="far fa-check-circle"></i>
+                        <i class="fas fa-check-circle"></i>
                     </div>
 
                 </div>
