--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!--    FIN SECTION FONCTIONNEMENT    -->
 
         <!--    SECTION RESTAURANT    -->
-        <!--    <i class="far fa-heart"></i>    -->
+        
         <section>
 
             <p class="title">Restaurants</p>
@@ -89,7 +89,7 @@
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
                         <div class="description">
                             <div>  
-                                <h3>La palette du goût</h3>
+                                <p class="description-title">La palette du goût</p>
                                 <p>Ménilmontant</p>
                             </div>                       
                             <p class="icons">
@@ -106,7 +106,7 @@
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant La note enchantée">
                         <div class="description">
                             <div>
-                                <h3>La note enchantée</h3>
+                                <p class="description-title">La note enchantée</p>
                                 <p>Charonne</p>
                             </div>
                             <p class="icons">
@@ -123,7 +123,7 @@
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
                         <div class="description">
                             <div>
-                                <h3>À la française</h3>
+                                <p class="description-title">À la française</p>
                                 <p>Cité Rouge</p>
                             </div>
                             <p class="icons">
@@ -140,7 +140,7 @@
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant Le délice des sens">
                         <div class="description">
                             <div>
-                                <h3>Le délice des sens</h3>
+                                <p class="description-title">Le délice des sens</p>
                                 <p>Folie-Méricourt</p>
                             </div>
                             <p class="icons">
