modification du heart des card restaurants. changement de p en button

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                                 <p class="description-title">La palette du goût</p>
                                 <p>Ménilmontant</p>
                             </div>                       
-                            <p class="icons">
+                            <button class="icons">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </p>
+                            </button>
                         </div>
                     </a>
                 </div>
