--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <p class="title">Restaurants</p>
 
-            <div>
+            <div class="restaurants-list">
 
                 <div class="card restaurant">
                     <a href="/la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
@@ -109,10 +109,10 @@
                                 <p class="description-title">La note enchantée</p>
                                 <p>Charonne</p>
                             </div>
-                            <p class="icons">
+                            <button class="icons">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </p>
+                            </button>
                         </div>
                     </a>
                 </div>
@@ -126,10 +126,10 @@
                                 <p class="description-title">À la française</p>
                                 <p>Cité Rouge</p>
                             </div>
-                            <p class="icons">
+                            <button class="icons">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </p>
+                            </button>
                         </div>
                     </a>
                 </div>
@@ -143,10 +143,10 @@
                                 <p class="description-title">Le délice des sens</p>
                                 <p>Folie-Méricourt</p>
                             </div>
-                            <p class="icons">
+                            <button class="icons">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
-                            </p>
+                            </button>
                         </div>
                     </a>
                 </div>
