--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
 
     <footer>
 
+        <h2>ohmyfood</h2>
         <ul>
-            <li>ohmyfood</li>
+            
 
             <li>
                 <a href="#" title="proposer un restaurant">
