--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -182,8 +182,9 @@
 
         <footer>
 
+            <h2>ohmyfood</h2>
+            
             <ul>
-                <li>ohmyfood</li>
     
                 <li>
                     <a href="#" title="proposer un restaurant">
