--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -193,8 +193,9 @@
 
         <footer>
 
-            <ul>
-                <li>ohmyfood</li>
+            <h2>ohmyfood</h2>
+            
+            <ul>                
     
                 <li>
                     <a href="#" title="proposer un restaurant">
