--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -181,8 +181,9 @@
 
         <footer>
 
+            <h2>ohmyfood</h2>
+            
             <ul>
-                <li>ohmyfood</li>
     
                 <li>
                     <a href="#" title="proposer un restaurant">
