--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -182,8 +182,9 @@
 
         <footer>
 
+            <h2>ohmyfood</h2>
+            
             <ul>
-                <li>ohmyfood</li>
     
                 <li>
                     <a href="#" title="proposer un restaurant">
