modification du loading

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -206,7 +206,7 @@
                 </li>
     
                 <li>
-                    <a href="mailto:" title="nous envoyer un mail">
+                    <a href="mailto:mchristophecoach@gmail.com" title="nous envoyer un mail">
                         Contact
                     </a>
                 </li>
