--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <!--    LOADING     -->
     <div class="loading-container">
+        <p>BIENVENUE</p>
+        <p>CHARGEMENT DES MENUS</p>
         <div class="loading"></div>
     </div>
     <!--    FIN LOADING     -->
@@ -191,7 +193,7 @@
             </li>
 
             <li>
-                <a href="mailto:" title="nous envoyer un mail">
+                <a href="mailto:mchristophecoach@gmail.com" title="nous envoyer un mail">
                     Contact
                 </a>
             </li>
