--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -218,7 +218,7 @@
                 </li>
     
                 <li>
-                    <a href="mailto:" title="nous envoyer un mail">
+                    <a href="mailto:mchristophecoach@gmail.com" title="nous envoyer un mail">
                         Contact
                     </a>
                 </li>
