hover sur repas et effet ellipsis fonctionne

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -37,151 +37,155 @@
                     <i class="far fa-heart"></i>
                 </div>
 
-                <!--    ENTRÉES   -->
-                <div class="meal-section">
+                <!--<div class="menu">-->
 
-                    <p class="meal-section-title">ENTRÉES</p>
-                    <div class="underline"></div>
+                    <!--    ENTRÉES   -->
+                    <div class="meal-section">
 
-                    <div class="meal-list">
+                        <p class="meal-section-title">ENTRÉES</p>
+                        <div class="underline"></div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Ravioles de foie gras</p>
-                                <div class="meal-item-description">
-                                    <p>Accompagnés de leur crème à la truffe</p>
-                                    <p class="price">25€</p>
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Ravioles de foie gras</p>
+                                    <div class="meal-item-description">
+                                        <p>Accompagnés de leur crème à la truffe</p>
+                                        <p class="price">25€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Caviar osciètre</p>
-                                <div class="meal-item-description">
-                                    <p>Sur blini à la farine de blé noir</p>
-                                    <p class="price">35€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Caviar osciètre</p>
+                                    <div class="meal-item-description">
+                                        <p>Sur blini à la farine de blé noir</p>
+                                        <p class="price">35€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Homard et espuma de potiron</p>
-                                <div class="meal-item-description">
-                                    <p>Mariné aux zestes d'orange</p>
-                                    <p class="price">20€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Homard et espuma de potiron</p>
+                                    <div class="meal-item-description">
+                                        <p>Mariné aux zestes d'orange</p>
+                                        <p class="price">20€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Foie gras de canard cuit entier</p>
-                                <div class="meal-item-description">
-                                    <p>Confiture de figue et pain toasté</p>
-                                    <p class="price">35€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Foie gras de canard cuit entier</p>
+                                    <div class="meal-item-description">
+                                        <p>Confiture de figue et pain toasté</p>
+                                        <p class="price">35€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                    </div>
-
-                </div>
-
-                <!--    PLATS   -->
-                <div class="meal-section">
-
-                    <p class="meal-section-title">PLATS</p>
-                    <div class="underline"></div>
-
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Noix de coquilles Saint-Jacques</p>
-                                <div class="meal-item-description">
-                                    <p>Sur lit de purée de céleri-rave</p>
-                                    <p class="price">40€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Langoustine poêlée</p>
-                                <div class="meal-item-description">
-                                    <p>Purée de patate douce</p>
-                                    <p class="price">35€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Mijoté de queue de boeuf</p>
-                                <div class="meal-item-description">
-                                    <p>Et riz sauvage aux zestes de citron</p>
-                                    <p class="price">44€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
                         </div>
 
                     </div>
 
-                </div>
+                    <!--    PLATS   -->
+                    <div class="meal-section">
 
-                <!--    DESSERTS   -->
-                <div class="meal-section">
+                        <p class="meal-section-title">PLATS</p>
+                        <div class="underline"></div>
 
-                    <p class="meal-section-title">DESSERTS</p>
-                    <div class="underline"></div>
+                        <div class="meal-list">
 
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Macaron noisette et chocolat</p>
-                                <div class="meal-item-description">
-                                    <p>Glace au caramel brun et sel de Guérande</p>
-                                    <p class="price">18€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Noix de coquilles Saint-Jacques</p>
+                                    <div class="meal-item-description">
+                                        <p>Sur lit de purée de céleri-rave</p>
+                                        <p class="price">40€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Baba au rhum revisité</p>
-                                <div class="meal-item-description">
-                                    <p>Avec son coulis de citron</p>
-                                    <p class="price">22€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Langoustine poêlée</p>
+                                    <div class="meal-item-description">
+                                        <p>Purée de patate douce</p>
+                                        <p class="price">35€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Tarte au citron meringuée</p>
-                                <div class="meal-item-description">
-                                    <p>Déstructurée</p>
-                                    <p class="price">23€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Mijoté de queue de boeuf</p>
+                                    <div class="meal-item-description">
+                                        <p>Et riz sauvage aux zestes de citron</p>
+                                        <p class="price">44€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
+
                         </div>
 
                     </div>
 
-                </div>
+                    <!--    DESSERTS   -->
+                    <div class="meal-section">
+
+                        <p class="meal-section-title">DESSERTS</p>
+                        <div class="underline"></div>
+
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Macaron noisette et chocolat</p>
+                                    <div class="meal-item-description">
+                                        <p>Glace au caramel brun et sel de Guérande</p>
+                                        <p class="price">18€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Baba au rhum revisité</p>
+                                    <div class="meal-item-description">
+                                        <p>Avec son coulis de citron</p>
+                                        <p class="price">22€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Tarte au citron meringuée</p>
+                                    <div class="meal-item-description">
+                                        <p>Déstructurée</p>
+                                        <p class="price">23€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                <!--</div>-->
 
 
                 <button>Commander</button>
